Add some (fairly) stand-alone files from the Borque engine's "alux" branch.
These files will need to be updated to make them work with Torque3D.

--- a/My Projects/Alux3D/buildFiles/VisualStudio 2008/projects/Alux3D.vcproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2008/projects/Alux3D.vcproj
@@ -337,7 +337,7 @@
 				Name="source"
 				Filter="">
 				<File
-				   RelativePath="D:\Alux3D\Alux3D\Engine\source\main\main.cpp">
+				   RelativePath="..\..\..\..\..\Engine\source\main\main.cpp">
 				</File>
 			</Filter>
 		</Filter>
