--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/Alux3D.vcxproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/Alux3D.vcxproj
@@ -219,7 +219,7 @@
 
                
                
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\source\main\main.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\source\main\main.cpp" />      
 			         
 			      
    
