--- a/My Projects/Alux3D/buildFiles/VisualStudio 2008/projects/lmng.vcproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2008/projects/lmng.vcproj
@@ -15,7 +15,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="D:/Alux3D/Alux3D/Engine/lib//compiled/$(ConfigurationName).$(PlatformName)"
+			OutputDirectory="../../../../../Engine/lib//compiled/$(ConfigurationName).$(PlatformName)"
 			IntermediateDirectory="../../Link/Vc2k8.$(ConfigurationName).$(PlatformName)/$(ProjectName)"
 			ConfigurationType="4"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -42,7 +42,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				EnableIntrinsicFunctions="1"
-				AdditionalIncludeDirectories="D:/Alux3D/Alux3D/Engine/lib/lmng;D:/Alux3D/Alux3D/Engine/lib/lpng;D:/Alux3D/Alux3D/Engine/lib/zlib;D:/Alux3D/Alux3D/Engine/lib/ljpeg;"
+				AdditionalIncludeDirectories="../../../../../Engine/lib/lmng;../../../../../Engine/lib/lpng;../../../../../Engine/lib/zlib;../../../../../Engine/lib/ljpeg;"
 				PreprocessorDefinitions="MNG_OPTIMIZE_OBJCLEANUP;TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -96,7 +96,7 @@
 		</Configuration>
       <Configuration
 			Name="Optimized Debug|Win32"
-			OutputDirectory="D:/Alux3D/Alux3D/Engine/lib//compiled/$(ConfigurationName).$(PlatformName)"
+			OutputDirectory="../../../../../Engine/lib//compiled/$(ConfigurationName).$(PlatformName)"
 			IntermediateDirectory="../../Link/Vc2k8.$(ConfigurationName).$(PlatformName)/$(ProjectName)"
 			ConfigurationType="4"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -124,7 +124,7 @@
 				Optimization="3"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="1"
-				AdditionalIncludeDirectories="D:/Alux3D/Alux3D/Engine/lib/lmng;D:/Alux3D/Alux3D/Engine/lib/lpng;D:/Alux3D/Alux3D/Engine/lib/zlib;D:/Alux3D/Alux3D/Engine/lib/ljpeg;"
+				AdditionalIncludeDirectories="../../../../../Engine/lib/lmng;../../../../../Engine/lib/lpng;../../../../../Engine/lib/zlib;../../../../../Engine/lib/ljpeg;"
 				PreprocessorDefinitions="MNG_OPTIMIZE_OBJCLEANUP;TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -178,7 +178,7 @@
       </Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="D:/Alux3D/Alux3D/Engine/lib//compiled/$(ConfigurationName).$(PlatformName)"
+			OutputDirectory="../../../../../Engine/lib//compiled/$(ConfigurationName).$(PlatformName)"
 			IntermediateDirectory="../../Link/Vc2k8.$(ConfigurationName).$(PlatformName)/$(ProjectName)"
 			ConfigurationType="4"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -205,7 +205,7 @@
 				AdditionalOptions="/MP"
 				Optimization="3"
 				InlineFunctionExpansion="2"
-				AdditionalIncludeDirectories="D:/Alux3D/Alux3D/Engine/lib/lmng;D:/Alux3D/Alux3D/Engine/lib/lpng;D:/Alux3D/Alux3D/Engine/lib/zlib;D:/Alux3D/Alux3D/Engine/lib/ljpeg;"
+				AdditionalIncludeDirectories="../../../../../Engine/lib/lmng;../../../../../Engine/lib/lpng;../../../../../Engine/lib/zlib;../../../../../Engine/lib/ljpeg;"
 				PreprocessorDefinitions="MNG_OPTIMIZE_OBJCLEANUP;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -264,127 +264,127 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_callback_xs.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_callback_xs.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunks.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunks.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunk_descr.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunk_descr.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunk_descr.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunk_descr.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunk_io.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunk_io.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunk_io.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunk_io.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunk_prc.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunk_prc.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunk_prc.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunk_prc.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_chunk_xs.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_chunk_xs.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_cms.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_cms.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_cms.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_cms.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_conf.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_conf.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_data.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_data.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_display.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_display.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_display.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_display.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_dither.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_dither.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_dither.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_dither.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_error.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_error.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_error.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_error.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_filter.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_filter.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_filter.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_filter.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_hlapi.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_hlapi.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_jpeg.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_jpeg.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_jpeg.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_jpeg.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_memory.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_memory.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_objects.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_objects.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_object_prc.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_object_prc.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_object_prc.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_object_prc.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_pixels.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_pixels.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_pixels.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_pixels.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_prop_xs.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_prop_xs.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_read.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_read.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_read.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_read.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_trace.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_trace.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_trace.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_trace.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_types.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_types.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_write.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_write.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_write.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_write.h">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_zlib.c">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_zlib.c">
 			</File>
 			<File
-			   RelativePath="D:\Alux3D\Alux3D\Engine\lib\lmng\libmng_zlib.h">
+			   RelativePath="..\..\..\..\..\Engine\lib\lmng\libmng_zlib.h">
 			</File>
 		</Filter>
 	</Files>
