--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/Alux3D.vcxproj.filters
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/Alux3D.vcxproj.filters
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
    <ItemGroup>
       <Filter Include="Source Files">
-         <UniqueIdentifier>{7951d175-ede4-4534-8ce2-4312a4f60672}</UniqueIdentifier>
+         <UniqueIdentifier>{981c55c9-4d4e-4b1a-a657-c08c8b7971f6}</UniqueIdentifier>
          <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;cc</Extensions>
       </Filter>
       <Filter Include="Source Files\source">
-         <UniqueIdentifier>{52ef3b61-e027-48b7-a616-09cdbef14817}</UniqueIdentifier>
+         <UniqueIdentifier>{36a29ba2-edbb-4095-9267-bdfb31555e64}</UniqueIdentifier>
       </Filter>
    </ItemGroup>
   <ItemGroup>
@@ -15,7 +15,7 @@
     </ResourceCompile>
   </ItemGroup>
    <ItemGroup>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\source\main\main.cpp">
+      <ClCompile Include="..\..\..\..\..\Engine\source\main\main.cpp">
          <Filter>Source Files\source</Filter>
       </ClCompile>
    </ItemGroup>
