--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/convexDecomp.vcxproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/convexDecomp.vcxproj
@@ -46,13 +46,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/Alux3D/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">convexDecomp_DEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">D:/Alux3D/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">convexDecomp_OPTIMIZEDDEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/Alux3D/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">convexDecomp</TargetName>
   </PropertyGroup>
@@ -61,7 +61,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>D:/Alux3D/Alux3D/Engine/lib/convexDecomp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../../Engine/lib/convexDecomp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -98,7 +98,7 @@
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>D:/Alux3D/Alux3D/Engine/lib/convexDecomp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../../Engine/lib/convexDecomp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -134,7 +134,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>D:/Alux3D/Alux3D/Engine/lib/convexDecomp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../../Engine/lib/convexDecomp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -167,122 +167,122 @@
 
                
                
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvConcavityVolume.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvConcavityVolume.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvConcavityVolume.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvConcavityVolume.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvConvexDecomposition.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvConvexDecomposition.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvConvexDecomposition.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvConvexDecomposition.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvFloatMath.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvFloatMath.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvFloatMath.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvFloatMath.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvFloatMath.inl" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvFloatMath.inl" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvHashMap.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvHashMap.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvMeshIslandGeneration.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvMeshIslandGeneration.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvMeshIslandGeneration.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvMeshIslandGeneration.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvRayCast.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvRayCast.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvRayCast.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvRayCast.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvRemoveTjunctions.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvRemoveTjunctions.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvRemoveTjunctions.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvRemoveTjunctions.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvSimpleTypes.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvSimpleTypes.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvSplitMesh.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvSplitMesh.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvSplitMesh.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvSplitMesh.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvStanHull.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvStanHull.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvStanHull.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvStanHull.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvThreadConfig.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\NvThreadConfig.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvThreadConfig.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvThreadConfig.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\NvUserMemAlloc.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\NvUserMemAlloc.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\wavefront.cpp" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\convexDecomp\wavefront.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\convexDecomp\wavefront.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\convexDecomp\wavefront.h" />      
 			         
 			      
    
