--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/lungif.vcxproj.filters
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/lungif.vcxproj.filters
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
    <ItemGroup>
       <Filter Include="Source Files">
-         <UniqueIdentifier>{5e7052e8-eaf2-4b41-af23-bfb83816690b}</UniqueIdentifier>
+         <UniqueIdentifier>{1662b66d-62ec-4cbb-ab41-9a7e3d59cdb5}</UniqueIdentifier>
          <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;cc</Extensions>
       </Filter>
       <Filter Include="Source Files\lib">
-         <UniqueIdentifier>{d797bff1-b7df-4e71-a108-613040d92f92}</UniqueIdentifier>
+         <UniqueIdentifier>{cea6f5d9-f377-420a-ae6a-bfa299bd151e}</UniqueIdentifier>
       </Filter>
    </ItemGroup>
   <ItemGroup>
@@ -15,21 +15,21 @@
     </ResourceCompile>
   </ItemGroup>
    <ItemGroup>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\lungif\dgif_lib.c">
+      <ClCompile Include="..\..\..\..\..\Engine\lib\lungif\dgif_lib.c">
          <Filter>Source Files\lib</Filter>
       </ClCompile>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\lungif\gifalloc.c">
+      <ClCompile Include="..\..\..\..\..\Engine\lib\lungif\gifalloc.c">
          <Filter>Source Files\lib</Filter>
       </ClCompile>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\lungif\gif_err.c">
+      <ClCompile Include="..\..\..\..\..\Engine\lib\lungif\gif_err.c">
          <Filter>Source Files\lib</Filter>
       </ClCompile>
    </ItemGroup>
    <ItemGroup>
-      <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\lungif\gif_lib.h">
+      <ClInclude Include="..\..\..\..\..\Engine\lib\lungif\gif_lib.h">
          <Filter>Source Files\lib</Filter>
       </ClInclude>
-      <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\lungif\gif_lib_private.h">
+      <ClInclude Include="..\..\..\..\..\Engine\lib\lungif\gif_lib_private.h">
          <Filter>Source Files\lib</Filter>
       </ClInclude>
    </ItemGroup>
