--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/tinyxml.vcxproj.filters
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/tinyxml.vcxproj.filters
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
    <ItemGroup>
       <Filter Include="Source Files">
-         <UniqueIdentifier>{274f41d0-a63b-40b2-8944-9719880eb9eb}</UniqueIdentifier>
+         <UniqueIdentifier>{70290122-b180-475e-9a07-be2d0dc9096c}</UniqueIdentifier>
          <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;cc</Extensions>
       </Filter>
       <Filter Include="Source Files\lib">
-         <UniqueIdentifier>{61e56d38-efb6-40b1-a888-752669fe3269}</UniqueIdentifier>
+         <UniqueIdentifier>{9884f3c2-607f-44d4-a412-54d4fbaa2556}</UniqueIdentifier>
       </Filter>
    </ItemGroup>
   <ItemGroup>
@@ -15,24 +15,24 @@
     </ResourceCompile>
   </ItemGroup>
    <ItemGroup>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\tinyxml\tinystr.cpp">
+      <ClCompile Include="..\..\..\..\..\Engine\lib\tinyxml\tinystr.cpp">
          <Filter>Source Files\lib</Filter>
       </ClCompile>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\tinyxml\tinyxml.cpp">
+      <ClCompile Include="..\..\..\..\..\Engine\lib\tinyxml\tinyxml.cpp">
          <Filter>Source Files\lib</Filter>
       </ClCompile>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\tinyxml\tinyxmlerror.cpp">
+      <ClCompile Include="..\..\..\..\..\Engine\lib\tinyxml\tinyxmlerror.cpp">
          <Filter>Source Files\lib</Filter>
       </ClCompile>
-      <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\tinyxml\tinyxmlparser.cpp">
+      <ClCompile Include="..\..\..\..\..\Engine\lib\tinyxml\tinyxmlparser.cpp">
          <Filter>Source Files\lib</Filter>
       </ClCompile>
    </ItemGroup>
    <ItemGroup>
-      <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\tinyxml\tinystr.h">
+      <ClInclude Include="..\..\..\..\..\Engine\lib\tinyxml\tinystr.h">
          <Filter>Source Files\lib</Filter>
       </ClInclude>
-      <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\tinyxml\tinyxml.h">
+      <ClInclude Include="..\..\..\..\..\Engine\lib\tinyxml\tinyxml.h">
          <Filter>Source Files\lib</Filter>
       </ClInclude>
    </ItemGroup>
