--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/zlib.vcxproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/zlib.vcxproj
@@ -46,13 +46,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/Alux3D/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">zlib_DEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">D:/Alux3D/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">zlib_OPTIMIZEDDEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/Alux3D/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">zlib</TargetName>
   </PropertyGroup>
@@ -61,7 +61,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>D:/Alux3D/Alux3D/Engine/lib/zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../../Engine/lib/zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -98,7 +98,7 @@
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>D:/Alux3D/Alux3D/Engine/lib/zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../../Engine/lib/zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -134,7 +134,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>D:/Alux3D/Alux3D/Engine/lib/zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../../Engine/lib/zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -167,132 +167,132 @@
 
                
                
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\adler32.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\adler32.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\compress.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\compress.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\crc32.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\crc32.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\crc32.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\crc32.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\deflate.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\deflate.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\deflate.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\deflate.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\gzclose.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\gzclose.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\gzguts.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\gzguts.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\gzlib.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\gzlib.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\gzread.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\gzread.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\gzwrite.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\gzwrite.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\infback.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\infback.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\inffast.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\inffast.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\inffast.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\inffast.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\inffixed.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\inffixed.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\inflate.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\inflate.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\inflate.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\inflate.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\inftrees.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\inftrees.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\inftrees.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\inftrees.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\trees.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\trees.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\trees.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\trees.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\uncompr.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\uncompr.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\zconf.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\zconf.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\zlib.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\zlib.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="D:\Alux3D\Alux3D\Engine\lib\zlib\zutil.c" />      
+               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\zlib\zutil.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="D:\Alux3D\Alux3D\Engine\lib\zlib\zutil.h" />      
+               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\zlib\zutil.h" />      
 			         
 			      
    
